--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,37 @@
 .App {
   text-align: center;
+  font-size: 1.2em;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+ul {
+  background-color: hotpink;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+ul {
+  margin: 15px;
+  padding: 5px;
+  font-family: sans-serif;
+  list-style: none;
+  box-shadow: 1px 1px 3px #444;
 }
 
-.App-title {
-  font-size: 1.5em;
+li {
+  background-color: #999;
+  border-radius: 3px;
+  padding: 5px 10px;
 }
 
-.App-intro {
-  font-size: large;
+button {
+  padding: 8px 12px;
+  margin: 4px;
+  border: none;
+  border-radius: 3px;
+  text-transform: uppercase;
+  background-color: #52769d;
+  color: #232323;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+button:hover {
+  text-decoration: underline;
+  text-decoration-color: #669cb4
 }
